--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -36,4 +36,8 @@
         overflow: auto;
         justify-content: space-between;
         height: 38vh;
+        
 } 
+::-webkit-scrollbar {
+    display: none;
+}
