--- a/src/components/styles/botaomenu.css
+++ b/src/components/styles/botaomenu.css
@@ -8,7 +8,8 @@
     background-color: #202425 ;
     align-items: center;
     justify-content: center;
-    color:#8f8f8f;
+    color:#f7f7f7;
     cursor: pointer;
     text-decoration: none;
+    font-size: 1.2rem;
 }
