--- a/src/pages/SignUp/signuo.css
+++ b/src/pages/SignUp/signuo.css
@@ -1,38 +1,38 @@
-.bcL{
+.bcL1{
   width: 100%;
   height: 100vh;
   background-color: rgb(13, 13, 13);
 }
-.bcg1{
+.bcg2{
   width: 100%;
   height: 100vh;
-  background-image: url('../../images/6.jpeg');
+  background-image: url('../../images/austin-neill-hgO1wFPXl3I-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.3;
+  opacity: 0.4;
   position: absolute;
   position: fixed;
 }
-.posF{
+.posF1{
   display: flex;
   justify-content: center;
   margin-top: 20%;
 }
-.containerForm {
+.containerForm1 {
   display: flex;
   align-items: center;
   width: 25vw;
-  height: 50vh;
+  height: 62vh;
   justify-content: center;
   background-color: rgb(255, 255, 255);
   border-radius: 25px;
   position: absolute;
-  margin-top: 15%;
+  margin-top: 12%;
   margin-left: 40%;
   
 }
 
-.formContent {
+.formContent1 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +44,7 @@
   color: black;
   border-radius: 10px;
 }
-.formContent .texti
+.formContent1 .texti1
 {
   background-color: white;
   color: rgb(0, 0, 0);
@@ -56,15 +56,15 @@
   background: transparent;
   font-size: 1.1rem;
   border-bottom: 2px solid   rgb(0, 195, 255);
-  margin-bottom: 15%;
+  margin-bottom: 11%;
 }
-.env1{
+.env2{
   background-color: rgb(0, 195, 255);
   width: 115%;
-  height: 6vh;
+  height: 36vh;
   border-radius: 4px;
 }
-.formContent span{
+.formContent1 span{
   color: black;
   font-size: 12px;
 }
