--- a/src/pages/SignUp/signuo.css
+++ b/src/pages/SignUp/signuo.css
@@ -16,19 +16,18 @@
 .posF1{
   display: flex;
   justify-content: center;
-  margin-top: 20%;
 }
 .containerForm1 {
   display: flex;
   align-items: center;
-  width: 25vw;
+  width: 400px;
   height: 62vh;
   justify-content: center;
   background-color: rgb(255, 255, 255);
   border-radius: 25px;
   position: absolute;
   margin-top: 12%;
-  margin-left: 40%;
+  margin-left: 36%;
   
 }
 
@@ -48,7 +47,7 @@
 {
   background-color: white;
   color: rgb(0, 0, 0);
-  width: 115%;
+  width: 135%;
   height: 4vh;
   border-style: none;
   border: none;
@@ -60,8 +59,8 @@
 }
 .env2{
   background-color: rgb(0, 195, 255);
-  width: 115%;
-  height: 36vh;
+  height: 46vh;
+  width: 135%;
   border-radius: 4px;
 }
 .formContent1 span{
