--- a/src/pages/video/vidv.css
+++ b/src/pages/video/vidv.css
@@ -1,136 +1,132 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: #58555e;
-  background-color: #1D2123;
+  background-color: #1d2123;
 }
-.perfoto{
+.perfoto {
   background-size: cover;
 }
 .searchPv {
   margin-top: 3%;
   margin-left: 2%;
 }
-.video_content{
+.video_content {
   margin-top: 2%;
   margin-left: 3%;
 }
-.geralvd{
-  
+.geralvd {
   width: 82%;
-    min-height: 96vh;
-    float: right;
+  min-height: 96vh;
+  margin-left: auto;
 }
 
-  
-  .video_items a img {
-    width: 295px;
-    height: 170px;
-    object-fit: cover;
-  }
-  
-  .video_items .details {
-    margin-top: 15px;
-  }
-  
-   .img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 2px solid rgb(238, 213, 89);
-    margin: 10px 20px 0 0;
-    background-color: white;
-    overflow: hidden;
-  }
-  
-  .video_items img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-   .img img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  
-  .video_items .heading {
-    width: 80%;
-    color: #fff;
-  }
-  
-  .video_items p {
-    margin: 0;
-  }
-  
-  .video_items span {
-    margin: 0;
-    color: grey;
-    font-size: 13px;
-    font-weight: 500;
-  }
-  
-  .flex {
-    display: flex;
-  }
-  
-  /*--------------video_items------------*/
-  @media screen and (min-width: 768px) {
+.video_items {
+  border-radius: 10px;
+  background-color: #111;
+}
 
-    .nav .nav_items {
-      row-gap: 27px;
-    }
-  
-    .nav {
-      left: 0;
-      padding: 19px 24px 0;
-      width: 88px;
-    }
-  
-    .nav:hover {
-      width: 265px;
-    }
-  
-    .nav .nav_subititle,
-    .nav .logo_name,
-    .nav .nav_dropdown-icon,
-    .nav .navtop .nav_link:nth-child(4),
-    .nav .subscribe-contain {
-      opacity: 0;
-      transition: 0.5s;
-    }
-  
-    .nav:hover .nav_subititle,
-    .nav:hover .logo_name,
-    .nav:hover .nav_dropdown-icon,
-    .nav:hover .navtop .nav_link:nth-child(4),
-    .nav:hover .subscribe-contain {
-      opacity: 1;
-    }
-  
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-gap: 20px;
-    }
-  }
-  
-  @media screen and (max-width: 420px) {
-  
-    
-  
-    .grid {
-      grid-template-columns: repeat(1, 1fr);
-    }
-  
+.video_items a img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
 
+.video_items .details {
+  padding: 15px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid rgb(238, 213, 89);
+  margin: 10px 20px 0 0;
+  background-color: white;
+  overflow: hidden;
+}
+
+.video_items img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.video_items .heading {
+  color: #fff;
+}
+
+.video_items p {
+  margin: 0;
+}
+
+.video_items span {
+  margin: 0;
+  color: grey;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+/*--------------video_items------------*/
+@media screen and (min-width: 768px) {
+  .nav .nav_items {
+    row-gap: 27px;
   }
-  
-  @media screen and (min-width: 1080px) {
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 20px;
-    }
+
+  .nav {
+    left: 0;
+    padding: 19px 24px 0;
+    width: 88px;
   }
-  
+
+  .nav:hover {
+    width: 265px;
+  }
+
+  .nav .nav_subititle,
+  .nav .logo_name,
+  .nav .nav_dropdown-icon,
+  .nav .navtop .nav_link:nth-child(4),
+  .nav .subscribe-contain {
+    opacity: 0;
+    transition: 0.5s;
+  }
+
+  .nav:hover .nav_subititle,
+  .nav:hover .logo_name,
+  .nav:hover .nav_dropdown-icon,
+  .nav:hover .navtop .nav_link:nth-child(4),
+  .nav:hover .subscribe-contain {
+    opacity: 1;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+  }
+}
