--- a/src/components/styles/MRHome.css
+++ b/src/components/styles/MRHome.css
@@ -1,21 +1,25 @@
-.return{
-    margin-right: 3%;
-        min-width: 22%;
-       
+.return {
+  margin-right: 3%;
 }
-.musicac{
-    min-width: 22%;
-    height: 73%;
-    border-radius: 40px;
-    background-color: white;
-    overflow: hidden;
+.musicac {
+  width: 19vw;
+  border-radius: 40px;
+  height: 35vh;
+  background-color: white;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.6s ease;
+}
 
+.musicac:hover {
+  opacity: 0.7;
+  transform: scale(1.01);
 }
+
+
+.musicac img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     
-    .videoH img {
-        width: 100%;
-        height: 100%;
-        block-size: cover;
-        object-position: left;
-        object-fit: cover;
-    }
+}
