--- a/src/components/styles/videoH.css
+++ b/src/components/styles/videoH.css
@@ -1,10 +1,18 @@
 .videoH {
-    min-width: 60%;
+    min-width: 40vw;
     height: 99%;
     background: #000; 
     border-radius: 40px;
     overflow: hidden;
+     cursor: pointer;
+    transition: all 0.6s ease;
 }
+
+.videoH:hover {
+  opacity: 0.7;
+  transform: scale(1.01);
+}
+
 
 .videoH img {
     width: 100%;
