--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -2,11 +2,14 @@
   width: 100%;
   height: 100vh;
   background-color: rgb(13, 13, 13);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .bcg1{
   width: 100%;
   height: 100vh;
-  background-image: url('../../images/6.jpeg');
+  background-image: url('../../images/8.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.3;
@@ -16,28 +19,58 @@
 .posF{
   display: flex;
   justify-content: center;
-  margin-top: 20%;
 }
 .containerForm {
-  display: flex;
   align-items: center;
-  width: 25vw;
-  height: 50vh;
+  width: 70vw;
+  height: 83vh;
   justify-content: center;
-  background-color: rgb(255, 255, 255);
+  background-color: #1D2123;
   border-radius: 25px;
   position: absolute;
-  margin-top: 15%;
-  margin-left: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+ 
+}
+.containerForm h2{
+  position: absolute;
+  top: 0;
+  margin-top: 5%;
+  margin-left: 5%;
+  font-size: 1.9rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: bold;
+
+}
+.containerForm h4{
+  position: absolute;
+  bottom: 0;
+  margin-top: 5%;
+  margin-left: 5%;
+  font-size: 0.8rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #515151;
+
+}
+.containerForm .rigth{
+  width: 35vw;
+  height: 80vh;
+  border-radius: 20px;
+  background-color: aquamarine;
+  background-image: url('../../images/8.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   
 }
-
-.formContent {
+.rigth{
+  margin-right: 1%;
+}
+.containerForm .formContent {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   gap: 1rem;
   width: 12rem;
   height: 16rem;
@@ -46,25 +79,31 @@
 }
 .formContent .texti
 {
-  background-color: white;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  padding: 0.5rem;
+  background-color: #1D2123;
   width: 115%;
-  height: 4vh;
   border-style: none;
-  border: none;
+  border: solid 1px  rgb(121, 121, 121);;
+  border-radius: 5px;
   outline: none;
   background: transparent;
   font-size: 1.1rem;
-  border-bottom: 2px solid   rgb(0, 195, 255);
   margin-bottom: 15%;
 }
 .env1{
-  background-color: rgb(0, 195, 255);
-  width: 115%;
-  height: 6vh;
+  background-color: rgb(110, 110, 110);
+  padding: 0.7rem;
+  width: 125%;
   border-radius: 4px;
 }
 .formContent span{
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 12px;
+}
+.formContent{
+  margin-left: 13%;
+}
+.env1:hover{
+  background-color: rgb(212, 212, 212);
 }
