--- a/src/pages/SignUp/signuo.css
+++ b/src/pages/SignUp/signuo.css
@@ -1,33 +1,57 @@
 .bcL1{
   width: 100%;
   height: 100vh;
-  background-color: rgb(13, 13, 13);
+  background-color: rgb(13, 13, 13);  
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .bcg2{
+  
   width: 100%;
   height: 100vh;
-  background-image: url('../../images/austin-neill-hgO1wFPXl3I-unsplash.jpg');
+  background-image: url('../../images/7.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.4;
+  opacity: 0.3;
   position: absolute;
   position: fixed;
+}
+.containerForm1 h2{
+  position: absolute;
+  top: 0;
+  margin-top: 3%;
+  margin-left: 5%;
+  font-size: 1.9rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: bold;
+
+}
+.containerForm1 h4{
+  position: absolute;
+  bottom: 0;
+  margin-top: 5%;
+  margin-left: 5%;
+  font-size: 0.8rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #515151;
+
 }
 .posF1{
   display: flex;
   justify-content: center;
 }
 .containerForm1 {
-  display: flex;
-  align-items: center;
-  width: 400px;
-  height: 62vh;
+align-items: center;
+  width: 70vw;
+  height: 83vh;
   justify-content: center;
-  background-color: rgb(255, 255, 255);
+        background-color: #1D2123;
   border-radius: 25px;
   position: absolute;
-  margin-top: 12%;
-  margin-left: 36%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   
 }
 
@@ -42,28 +66,47 @@
   height: 16rem;
   color: black;
   border-radius: 10px;
+  margin-left: 13%;
+
+}
+
+.containerForm1 .rigth1{
+  width: 35vw;
+  height: 80vh;
+  border-radius: 20px;
+  background-color: aquamarine;
+  background-image: url('../../images/7.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+.rigth1{
+  margin-right: 1%;
 }
 .formContent1 .texti1
 {
-  background-color: white;
-  color: rgb(0, 0, 0);
-  width: 135%;
-  height: 4vh;
+   color: rgb(255, 255, 255);
+  padding: 0.5rem;
+  background-color: #1D2123;
+  width: 115%;
   border-style: none;
-  border: none;
+  border: solid 1px  rgb(121, 121, 121);;
+  border-radius: 5px;
   outline: none;
   background: transparent;
   font-size: 1.1rem;
-  border-bottom: 2px solid   rgb(0, 195, 255);
-  margin-bottom: 11%;
+  margin-bottom: 15%;
 }
 .env2{
-  background-color: rgb(0, 195, 255);
-  height: 46vh;
-  width: 135%;
+ background-color: rgb(110, 110, 110);
+  padding: 0.7rem;
+  width: 125%;
   border-radius: 4px;
 }
+.env2:hover{
+  background-color: rgb(212, 212, 212);
+}
 .formContent1 span{
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 12px;
 }
