--- a/src/pages/Single/Single.css
+++ b/src/pages/Single/Single.css
@@ -218,9 +218,13 @@
     font-size: 13px;
     margin: 0;
   }
+  .ddtaa{
+    text-decoration: solid;
+    font-weight: bolder;
+  }
     
   @media only screen and (max-width:768px) {
-    .video_items {
+    .video_item {
       flex-direction: column;
     }
   
