--- a/src/pages/video/vidv.css
+++ b/src/pages/video/vidv.css
@@ -2,7 +2,6 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: #58555e;
-  background-color: #1d2123;
 }
 .perfoto {
   background-size: cover;
@@ -24,6 +23,13 @@ body {
 .video_items {
   border-radius: 10px;
   background-color: #111;
+  cursor: pointer;
+  transition: all 0.6s ease;
+}
+.video_items:hover{
+
+  opacity: 0.7;
+  transform: scale(1.05);
 }
 
 .video_items a img {
@@ -117,7 +123,7 @@ body {
   }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 520px) {
   .grid {
     grid-template-columns: repeat(1, 1fr);
   }
