--- a/src/components/styles/station.css
+++ b/src/components/styles/station.css
@@ -7,6 +7,13 @@
   justify-content: space-between;
 }
 
+.radio-container {
+  width: auto;
+  height: auto;
+  border: 1px solid #f4f4f4;
+  padding: 1rem;
+}
+
 .itemRadio {
   width: 90%;
   border-radius: 0%;
