--- a/src/components/MusicUser/styles.module.css
+++ b/src/components/MusicUser/styles.module.css
@@ -1,5 +1,5 @@
 .containerMusic {
-  width: calc(100% - 18%);
+  width: calc(100% );
   margin-left: auto;
   display: flex;
   flex-direction: column;
@@ -105,12 +105,6 @@
   transition: all 0.6s ease;
 }
 
-.center{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20vw;
-}
 .musicItem:hover {
   opacity: 0.7;
   transform: scale(1.05);
